# django-silent-mammoth-whistle

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
silent_mammoth_whistle/: apps.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
silent_mammoth_whistle/migrations/: 0001_initial.py  0002_whistle_is_client_event.py  0003_remove_whistle_viewport_height_and_more.py  0004_rename_viewport_size_whistle_viewport_dimensions.py  0005_whistle_is_authenticated.py
silent_mammoth_whistle/static/silent_mammoth_whistle/css/: base.css
silent_mammoth_whistle/static/silent_mammoth_whistle/js/: whistle.js
silent_mammoth_whistle/templates/silent_mammoth_whistle/: _chart_javascript.html  _whistles_per_user_table.html  base.html  index.html  session.html
silent_mammoth_whistle/templatetags/: whistle_helpers.py
