[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-silent-mammoth-whistle"
version = "2.0.0"
description = "A super-simple user analytics tool that tracks user behaviour based on web requests to your Django app."
readme = "README.rst"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Ben Michie", email = "benopotamus@tinku.net"},
]
keywords = ["django", "analytics", "user", "tracking"]
requires-python = ">= 3.10"
dependencies = [
	"django>=4.2",
	"user-agents>=2.2.0",
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/benopotamus/django-silent-mammoth-whistle"
Documentation = "https://github.com/benopotamus/django-silent-mammoth-whistle/blob/main/README.rst"
Repository = "https://github.com/benopotamus/django-silent-mammoth-whistle"
"Bug Tracker" = "https://github.com/benopotamus/django-silent-mammoth-whistle/issues"
Changelog = "https://github.com/benopotamus/django-silent-mammoth-whistle/blob/main/CHANGELOG.rst"