[metadata]
name = django-silent-mammoth-whistle
version = 1.0
description = Enhances django+htmx so UI interactions can be specified purely in html templates
long_description = file: README.rst
url = https://github.com/benopotamus/django-silent-mammoth-whistle
author = Ben Michie
author_email = benopotamus@tinku.net
license = BSD-2-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Documentation = https://github.com/benopotamus/django-silent-mammoth-whistle/main/README.rst
    Release notes = https://github.com/benopotamus/django-silent-mammoth-whistle/main/CHANGELOG.rst
    Source = https://github.com/benopotamus/django-silent-mammoth-whistle
    Tracker = https://github.com/benopotamus/django-silent-mammoth-whistle/issues

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires = 
	Django >= 4.2
